# antispam-bot

./: LICENSE  README.md  pyproject.toml
src/: bot.py  db.py  predictor.py
